--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="container-fluid d-flex">
     <div class="about-cardPost">
-      <div class="after"><h1><%= form.text_field :name, class:"postName", placeholder:"Name" %></h1></div>
+      <div class="after"></div>
       <div class="content-create-post-adm">
         <!-- row -->
         <div class="row d-flex">
