--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,26 +1,30 @@
-<div class="container">
-    <h1>Contact Form</h1>
-    <%= form_for @contact do |f| %>
-      <div class="col-md-6">
-        <%= f.label :name %></br>
-        <%= f.text_field  :name, required: true, class: "contact-form-text-area" %></br>
+<div class="container form-contact">
+  <div class="row">
+    <div class="col-sm-12 form-col">
+      <h1>Entre em contato</h1>
+      <%= form_for @contact do |f| %>
+        <div class="col-sm-12">
+          <%= f.label :name %></br>
+          <%= f.text_field  :name, required: true, class: "contact-form-text-area" %></br>
 
-        <%= f.label :email %></br>
-        <%= f.text_field :email, required: true, class: "contact-form-text-area" %></br>
+          <%= f.label :email %></br>
+          <%= f.text_field :email, required: true, class: "contact-form-text-area" %></br>
 
-        <%= f.label :subject %></br>
-        <%= f.text_field :subject, required: true, class: "contact-form-text-area" %></br>
+          <%= f.label :subject %></br>
+          <%= f.text_field :subject, required: true, class: "contact-form-text-area" %></br>
 
-        <%= f.label :message %></br>
-        <%= f.text_area :message, rows: 8, cols: 40, required: true, class: "contact-form-text-area",
-              placeholder: "Send me a message"%></br>
+          <%= f.label :message %></br>
+          <%= f.text_area :message, rows: 8, cols: 40, required: true, class: "contact-form-text-area",
+                placeholder: "Send me a message"%></br>
 
-        <div class= "d-none">
-          <%= f.label :nickname %>
-          <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
+          <div class= "d-none">
+            <%= f.label :nickname %>
+            <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
+          </div>
+
+          <%= f.submit 'Send Message', class: 'btn btn-primary' %>
         </div>
-
-        <%= f.submit 'Send Message', class: 'btn btn-primary' %>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
+  </div>
 </div>
