--- a/app/assets/stylesheets/components/home/services.scss
+++ b/app/assets/stylesheets/components/home/services.scss
@@ -1,56 +1,80 @@
-.services{
-    margin-top: 50px;
+.services {
+  .row {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    .bg-services {
+      background-image: url("");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      text-align: center;
+      background-position-y: -16;
+      color: rgba(0, 0, 0, 0.5);
+      font-weight: bold;
+      outline: none;
+      height: 7vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 
-    .row{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        .bg-services{
-            background-image: url("https://i.postimg.cc/2SpScbSb/lineimar-bg.png");
-            background-repeat: no-repeat;
-            background-size: contain;
-            background-position: center;
-            text-align: center;
-            background-position-y: -16;
-            color: rgba(0, 0, 0, 0.5);
-            font-weight: bold;
-            outline: none;
-            height: 7vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+  .text-services {
+    padding: 30px;
+    text-align: center;
+    color: black;
+    font-size: 21px;
+    box-shadow: inset 0 0 20px #fbdbbb;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+  }
+
+  .services-line {
+    display: flex;
+    flex-direction: column;
+
+    .member-text {
+      padding: 17px;
+      text-align: center;
+      font-size: x-large;
+      color: black;
+      font-size: 21px;
+      height: 7vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .text-services{
-        padding: 17px;
-        text-align: center;
-        font-size: x-large;
-        color: black;
-        font-size: 21px;
+    .sft-logo {
+      img {
+        width: 60px;
+      }
     }
+  }
+}
 
-    .services-line{
-        display: flex;
-        flex-direction: column;
+.services-svg {
+  content: "";
+  background-image: url("https://i.postimg.cc/2SGxbjn4/new-service-svg-2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 500px;
+  height: 500px;
+}
 
-        .member-text{
-            padding: 17px;
-            text-align: center;
-            font-size: x-large;
-            color: black;
-            font-size: 21px;
-            height: 7vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .sft-logo {
-            img {
-              width: 60px;
-            }
-        }
-    }
+.jobs-svg {
+  content: "";
+  background-image: url("https://i.postimg.cc/TP379Nx5/new-service-svg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 500px;
+  height: 500px;
+  margin-bottom: -100px;
 }
