--- a/app/views/components/footer/_footer.html.erb
+++ b/app/views/components/footer/_footer.html.erb
@@ -21,14 +21,14 @@
           </a> -->
           <a
             class="li-ic"
-            href="https://www.linkedin.com/in/lineimar/"
+            href="#"
             target="_blank"
           >
             <i class="fab fa-linkedin-in fa-lg"> </i>
           </a>
           <a
             class="ins-ic"
-            href="https://www.instagram.com/lineimartranslations/"
+            href="#"
             target="_blank"
           >
             <i class="fab fa-instagram fa-lg"> </i>
@@ -40,9 +40,9 @@
       </div>
     </div>
   </div>
-  <div class="footer-copyright text-center py-3 d-flex justify-content-center">
+  <div class="footer-copyright text-center d-flex justify-content-center">
     © 2023 Copyright:&nbsp
-    <a href="https://www.linkedin.com/in/lineimar/"> Lineimar Translations</a>
+    <a href="#"> Your name </a>
     &nbsp
     <p>made by <a href="https://github.com/kleberkunha">Kleber da Cunha</a></p>
   </div>
