--- a/app/views/home/_jobs.html.erb
+++ b/app/views/home/_jobs.html.erb
@@ -3,21 +3,19 @@
         <div class="col-sm border card-show-jobs">
             <img src="https://i.postimg.cc/2yVLV0Nr/svgCHECK.png" alt="">
             <div class="text-translate-home">
-                <h2>Traduçoes</h2>
+                <h2>TEXT HERE</h2>
             </div>
         </div>
         <div class="col-sm border card-show-jobs-review">
             <img src="https://i.postimg.cc/Nfjs1dFw/svg-Review.png" alt="">
             <div class="text-translate-home">
-                <h2>Revisoes</h2>
+                <h2>TEXT HERE</h2>
             </div>
         </div>
         <div class="col-sm border card-show-edicao">
-            <div>
-                <img src="https://i.postimg.cc/CLnqGMz0/svg-Edit-Localiza-ao.png" alt="">
-            </div>
+            <img src="https://i.postimg.cc/CLnqGMz0/svg-Edit-Localiza-ao.png" alt="">
             <div class="text-edition-home">
-                <h2>Ediçoes e localizaçao</h2>
+                <h2>TEXT HERE</h2>
             </div>
         </div>
     </div>
