--- a/app/views/home/_services.html.erb
+++ b/app/views/home/_services.html.erb
@@ -1,44 +1,47 @@
+<div class="container services mt-2">
+    <div class="d-flex justify-content-center">
+        <div class="services-svg"></div>
+    </div>
+</div>
 <div class="container-fluid services">
     <div class="row">
-        <div class="col-sm-12 bg-services">
-            QUE SERVIÇOS OFEREÇO?
+        <div class="col-sm-4">
+            <h3>SERVICE NAME</h3>
+            <div class="text-services">
+                <p><%= @text_home.service1 %></p>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <h3>SERVICE NAME</h3>
+            <div class="text-services">
+                <p><%= @text_home.service2 %></p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <h3>SERVICE NAME</h3>
+            <div class="text-services">
+                <p><%= @text_home.service2 %></p>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <h3>SERVICE NAME</h3>
+            <div class="text-services">
+                <p><%= @text_home.service1 %></p>
+            </div>
         </div>
     </div>
 </div>
-
-<div class="container-fluid services">
-    <div class="row">
-        <div class="col-sm-6 text-services">
-            <p><%= @text_home.service1 %></p>
-            <p><%= @text_home.service2 %></p>
-            <p><%= @text_home.service3 %></p>
-            <p><%= @text_home.service4 %></p>
-        </div>
+<div class="container services ">
+    <div class="d-flex justify-content-center">
+        <div class="jobs-svg"></div>
     </div>
 </div>
-
 <div class="container-fluid services">
     <div class="row services-line">
-        <div class="col-sm-4 member-text">
+        <div class="col-sm-8 member-text">
             <%= @text_home.member%>
-        </div>
-        <div>
-            <a href="https://www.sft.fr/fr/homepage" target="_blank" class="sft-logo mt-3">
-                <img
-                  src="https://imgs.search.brave.com/is0LtQoLC-F35jJOo0betXfHAcASTqwosKYZW7E9wJs/rs:fit:350:305:1/g:ce/aHR0cHM6Ly9hbS10/cmFkdWN0aW9uLmNv/bS93cC1jb250ZW50/L3VwbG9hZHMvMjAx/OC8xMS9TRlQtcGFz/dGlsbGUtbWVtYnJl/X0dfc2YucG5n"
-                  alt="..."
-                  class="rounded-circle"
-                />
-            </a>
-        </div>
-    </div>
-</div>
-
-
-<div class="container-fluid services">
-    <div class="row">
-        <div class="col-sm-2 bg-services">
-            TRABALHOS REALIZADOS
         </div>
     </div>
 </div>
