--- a/app/assets/stylesheets/components/home/jobs.scss
+++ b/app/assets/stylesheets/components/home/jobs.scss
@@ -1,53 +1,50 @@
 .card-show-edicao,
 .card-show-jobs-review,
-.card-show-jobs{
-    background-color: #fbdbbb17;
-    margin: 0px 20px 0px 20px;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    box-shadow: 0px 5px 5px 0px #fbdbbbb2;
+.card-show-jobs {
+  background-color: #fbdbbb17;
+  margin: 0px 20px 0px 20px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  box-shadow: 0px 5px 5px 0px #fbdbbbb2;
+  display: flex;
+
+  img {
+    width: 50%;
+  }
+
+  .text-translate-home {
     display: flex;
-
-
-    img{
-        width: 50%;
-    }
-
-    .text-translate-home{
-        display: flex;
-        align-items: center;
-        margin-left: -20px;
-    }
+    align-items: center;
+    margin-left: -20px;
+  }
 }
 
+.card-show-jobs-review {
+  img {
+    width: 50%;
+  }
 
-.card-show-jobs-review{
-    img{
-        width: 50%;
-    }
-
-    .text-translate-home{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+  .text-translate-home {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
-
-.card-show-edicao{
-    align-items: self-end;
-    img{
-        width: 85%;
-    }
-    .text-edition-home{
-        width: 80%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 50px;
-    }
+.card-show-edicao {
+  align-items: self-end;
+  img {
+    width: 85%;
+  }
+  .text-edition-home {
+    width: 80%;
+    height: -webkit-fill-available;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
