--- a/app/assets/stylesheets/components/navbar/navbar.scss
+++ b/app/assets/stylesheets/components/navbar/navbar.scss
@@ -1,6 +1,6 @@
 .navbar-brand {
   width: 100%;
-  background-image: url("https://i.postimg.cc/8CCr3wxy/lineimar.png");
+  background-image: url("https://imgs.search.brave.com/9I8EyRGha6ktqCQRdoOjMxcf7SoALHAAc2rda7etzB8/rs:fit:350:225:1/g:ce/aHR0cHM6Ly9taW5k/Ym9keW1vbXMuY29t/L3dwLWNvbnRlbnQv/dXBsb2Fkcy8yMDE4/LzA2L1lvdXItTG9n/by1oZXJlLnBuZw");
   content: "";
   background-repeat: no-repeat;
   background-size: contain;
@@ -18,7 +18,6 @@
     margin-right: 50px;
 
     .nav-link {
-      background-image: url("https://i.postimg.cc/2SpScbSb/lineimar-bg.png");
       background-repeat: no-repeat;
       background-size: cover;
       text-align: center;
@@ -30,11 +29,9 @@
   box-shadow: none;
 }
 .button-links {
-  background-image: url("https://i.postimg.cc/2SpScbSb/lineimar-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
-  background-position-y: 5px;
   color: rgba(0, 0, 0, 0.5);
   font-weight: bold;
   outline: none;
